# stm32f7x7-hal

./: Cargo.toml  README.md
src/: adc.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  qei.rs  rcc.rs  serial.rs  signature.rs  spi.rs  time.rs  timer.rs  watchdog.rs
