[package]
name = "stm32f7x7-hal"
version = "0.1.3"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F7x7 familiy of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "stm32f767", "hal"]
license = "Apache-2.0"
repository = "https://github.com/no111u3/stm32f7x7-hal"
documentation = "https://docs.rs/stm32f7x7-hal"
readme = "README.md"

[dependencies]
cortex-m-rt = "0.6.7"
nb = "0.1.1"

[dependencies.cortex-m]
features = ["const-fn"]
version = "0.5.8"

[dependencies.stm32f7]
features = ["stm32f7x7"]
version = "0.6.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"

[features]
rt = ["stm32f7/rt"]
